# pytestlab

./: .coverage  .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION_COMPLETED.md  MIGRATION_GUIDE.md  MIGRATION_README.md  MULTILINGUAL_FIXES_COMPLETE.md  MULTILINGUAL_FIXES_SUMMARY.md  README.md  curly.yaml  debug_compliance.py  debug_patch.py  dejsoner.py  demo_db.db  example.ipynb  jsoner.py  keysight.ipynb  lm.toml  lm.yaml  pickler.py  pyproject.toml  pytest.ini  pytestlab.json  pytestlab.pickle  pytestlab.txt  recorded_psu_sim.yaml  requirements.txt  setup.py  test.db  test.ipynb  test.json  test.py  test_compliance.py  test_migration.py  test_monkey_patch.py  test_production.py  (+2 more)
.github/workflows/: build_wheels.yml  publish_release.yml  test.yml
docs/: FILE_ORGANIZATION.md  NOTEBOOK_STYLING_SUMMARY.md  READABILITY_IMPROVEMENTS.md  changelog.md  contributing.md  index.md  installation.md  mkdocs.yml
docs/api/: backends.md  common.md  config.md  errors.md  experiments.md  instruments.md  measurements.md
docs/en/: changelog.md  index.md  installation.md
docs/profiles/: creating.md  gallery.md
docs/schemas/: oscilloscope.json
docs/stylesheets/: extra.css
docs/tutorials/: 10_minute_tour.ipynb  example.ipynb
docs/user_guide/: async_vs_sync.md  bench_descriptors.md  cli.md  connecting.md  errors.md  getting_started.md  simulation.md  uncertainty.md
examples/: adaptive_data_sweep_10.npy  adaptive_sweep.npy  adaptive_sweep_1.npy  advanced_sweep_strategies.py  basic_example.py  bench_example.py  bench_session_integration.py  bench_sweep_integration_example.py  data_sweep.npy  database_integration_example.py  description.json  digital_multimeter_example.py  dmm.ipynb  dmm_example.py  example.ipynb  example_multimeter.py  example_oscilloscope.py  example_power_supply.py  example_spectroscopy_analysis.py  example_waveform_generator.py  experiment_data.parquet  facade_example.py  gas_particle_simulation.ipynb  grid_sweep_1.npy  gui.ipynb  measurement.py  measurement_session_example.py  measurement_session_sweep.py  naive_sweep.npy  naive_sweep_1.npy  osc_read.py  oscilloscope_jitter_example.py  parallel_sweep_example.py  plot.ipynb  plot.py  simulated_iv.py  smartbench.py  smartbench_connection copy.py  smartbench_visa.py  sweep.py  (+6 more)
examples/data/: adaptive_sweep_FAST_10.npy  adaptive_sweep_FAST_15.npy  anthropic.claude-3-5-sonnet-20241022-v2:0_exp1.npy  grad_sweep_FAST_10.npy  grad_sweep_FAST_15.npy  grid_sweep_FAST_10.npy  grid_sweep_FAST_15.npy  monte_sweep_FAST_10.npy  monte_sweep_FAST_15.npy
examples/instrument_descrptions/: .oscilloscope_description.py  digital_multimeter.py  digital_power_supply.py  oscilloscope.json  train.jsonl  waveform_generator_description.py
examples/parallel/: parallel_sweep_example.py
examples/replay_mode/: cli_test_measurement.py  exact_replay_test.py  example_measurement.py  replay_system_demo.py  test_real_replay.py  test_replay.py
examples_ci/: simulated_psu_dmm_sweep.py
packager/: dejsoner.py  extractor.py  jsoner.py
profiles/keysight/: benchsmart.py  infiniium.py
pytestlab/: MeasurementDatabase.py  __init__.py  _log.py  bench.py  cli.py  errors.py  utilities.py
pytestlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scpi_abstraction/: InstrumentManager.py  MeasurementDatabase.py  __init__.py  errors.py  instrument.py  utilities.py
scripts/: generate_profile_gallery.py
site/: 404.html  index.html  objects.inv
site/404/: index.html
tests/: awg.ipynb  ideal.py  oscilloscope_test.py  test.py  test1.py  test_autoinstrument_backend_override.py  test_cli_replay.py  test_compliance.py  test_instrument.py  test_logging.py  test_recording_backend_psu.py  test_replay_backend.py  test_safety.py  test_session_recording_backend.py  test_simulation_e2e.py  test_warnings.py
(+209 files in other folders)
